--- a/go-micro/currencyservice/currencyservice.yaml
+++ b/go-micro/currencyservice/currencyservice.yaml
@@ -17,7 +17,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image: harbor.creativebox.dev/devsecops/currencyservice
+          image: harbor.creativebox.dev/devsecops/currencyservice:3
           ports:
             - name: grpc
               containerPort: 7000
