--- a/go-micro/paymentservice/paymentservice.yaml
+++ b/go-micro/paymentservice/paymentservice.yaml
@@ -31,7 +31,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image: harbor.creativebox.dev/devsecops/paymentservice
+          image: harbor.creativebox.dev/devsecops/paymentservice:3
           ports:
             - containerPort: 50051
           env:
