--- a/go-micro/productcatalogservice/productcatalogservice.yaml
+++ b/go-micro/productcatalogservice/productcatalogservice.yaml
@@ -17,7 +17,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image: harbor.creativebox.dev/devsecops/productcatalogservice
+          image: harbor.creativebox.dev/devsecops/productcatalogservice:3
           ports:
             - containerPort: 3550
           env:
