--- a/go-micro/loadgenerator/loadgenerator.yaml
+++ b/go-micro/loadgenerator/loadgenerator.yaml
@@ -28,6 +28,8 @@ spec:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
     spec:
       serviceAccountName: go-micro 
+      imagePullSecrets:
+      - name: harbor-cred
       terminationGracePeriodSeconds: 5
       restartPolicy: Always
       initContainers:
