--- a/devsecops/api-gateway/api-gateway.yaml
+++ b/devsecops/api-gateway/api-gateway.yaml
@@ -16,6 +16,8 @@ spec:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
     spec:
       serviceAccountName: default
+      imagePullSecrets:
+      - name: harbor-cred
       securityContext:
         fsGroup: 1000
         runAsGroup: 1000
