--- a/devsecops/checkoutservice/checkoutservice.yaml
+++ b/devsecops/checkoutservice/checkoutservice.yaml
@@ -14,6 +14,8 @@ spec:
         app: checkoutservice
     spec:
       serviceAccountName: default
+      imagePullSecrets:
+      - name: harbor-cred
       securityContext:
         fsGroup: 1000
         runAsGroup: 1000
