--- a/devsecops/shippingservice/shippingservice.yaml
+++ b/devsecops/shippingservice/shippingservice.yaml
@@ -14,6 +14,8 @@ spec:
         app: shippingservice
     spec:
       serviceAccountName: default
+      imagePullSecrets:
+      - name: harbor-cred
       securityContext:
         fsGroup: 1000
         runAsGroup: 1000
