--- a/devsecops/shoppingassistantservice/shoppingassistantservice.yaml
+++ b/devsecops/shoppingassistantservice/shoppingassistantservice.yaml
@@ -15,6 +15,8 @@ spec:
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
+      imagePullSecrets:
+      - name: harbor-cred
       securityContext:
         fsGroup: 1000
         runAsGroup: 1000
