--- a/devsecops/loadgenerator/loadgenerator.yaml
+++ b/devsecops/loadgenerator/loadgenerator.yaml
@@ -63,7 +63,7 @@ spec:
         - name: FRONTEND_ADDR
           value: "api-gateway:80"
         - name: USERS
-          value: "100"
+          value: "1000000"
         resources:
           requests:
             cpu: 300m
