--- a/devsecops/currencyservice/currencyservice.yaml
+++ b/devsecops/currencyservice/currencyservice.yaml
@@ -51,8 +51,8 @@ spec:
             cpu: 100m
             memory: 64Mi
           limits:
-            cpu: 200m
-            memory: 128Mi
+            cpu: 500m
+            memory: 1Gi
 ---
 apiVersion: v1
 kind: Service
