--- a/devsecops/recommendationservice/recommendationservice.yaml
+++ b/devsecops/recommendationservice/recommendationservice.yaml
@@ -54,8 +54,8 @@ spec:
             cpu: 100m
             memory: 220Mi
           limits:
-            cpu: 200m
-            memory: 450Mi
+            cpu: 500m
+            memory: 1Gi
 ---
 apiVersion: v1
 kind: Service
