--- a/devsecops/loadgenerator/loadgenerator.yaml
+++ b/devsecops/loadgenerator/loadgenerator.yaml
@@ -66,8 +66,6 @@ spec:
           value: "1000000"
         resources:
           requests:
-            cpu: 300m
-            memory: 256Mi
+            memory: 1Gi
           limits:
-            cpu: 500m
-            memory: 512Mi
+            memory: 4Gi
