--- a/devsecops/cartservice/cartservice.yaml
+++ b/devsecops/cartservice/cartservice.yaml
@@ -15,7 +15,11 @@ spec:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/role: "redis-role"
-        vault.hashicorp.com/agent-inject-secret-redis-config.txt: "internal/data/redis/config"        
+        vault.hashicorp.com/agent-inject-secret-redis-config.txt: "internal/data/redis/config"      
+        vault.hashicorp.com/agent-inject-template-redis-password: |
+          {{- with secret "internal/data/redis/config" -}}
+          export REDIS_PASSWORD="{{ .Data.data.password }}"
+          {{- end }}          
     spec:
       serviceAccountName: redis-cart
       terminationGracePeriodSeconds: 5
