--- a/devsecops/cartservice/cartservice.yaml
+++ b/devsecops/cartservice/cartservice.yaml
@@ -18,7 +18,7 @@ spec:
         vault.hashicorp.com/agent-inject-secret-redis-config.txt: "internal/data/redis/config"      
         vault.hashicorp.com/agent-inject-template-redis-password: |
           {{- with secret "internal/data/redis/config" -}}
-          redis-password: "{{ .Data.data.password }}"
+          REDIS_PASSWORD="{{ .Data.data.password }}"
           {{- end -}}          
     spec:
       serviceAccountName: redis-cart
@@ -48,8 +48,8 @@ spec:
         - name: REDIS_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: redis-password
-              key: redis-password  
+              name: redis-config
+              key: redis-config.txt
         resources:
           requests:
             cpu: 200m
