--- a/devsecops/cartservice/cartservice.yaml
+++ b/devsecops/cartservice/cartservice.yaml
@@ -15,7 +15,7 @@ spec:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/role: "redis-role"
-        vault.hashicorp.com/agent-inject-secret-redis-config.txt: "internal/data/redis/config"      
+        vault.hashicorp.com/agent-inject-secret-redis-password: "internal/data/redis/config"      
         vault.hashicorp.com/agent-inject-template-redis-password: |
           {{- with secret "internal/data/redis/config" -}}
           REDIS_PASSWORD="{{ .Data.data.password }}"
@@ -47,9 +47,8 @@ spec:
           value: "redis-cart:6379"
         - name: REDIS_PASSWORD
           valueFrom:
-            secretKeyRef:
-              name: redis-config
-              key: redis-config.txt
+            fieldRef:
+              fieldPath: spec.containers[0].env[1].value
         resources:
           requests:
             cpu: 200m
