--- a/devsecops/cartservice/cartservice.yaml
+++ b/devsecops/cartservice/cartservice.yaml
@@ -15,7 +15,8 @@ spec:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/role: "devsecops"
-        vault.hashicorp.com/agent-inject-secret-redis-password.txt: "secret/redis-cart/config"      
+        vault.hashicorp.com/agent-inject-secret-redis-password.txt: "secret/redis-cart/config"
+        vault.hashicorp.com/namespace: "devsecops"  
         # vault.hashicorp.com/agent-inject-template-redis-password: |
         #   {{- with secret "secret/redis-cart/config" -}}
         #   export REDIS_PASSWORD="{{ .Data.data.password }}"
