--- a/devsecops/cartservice/cartservice.yaml
+++ b/devsecops/cartservice/cartservice.yaml
@@ -11,17 +11,15 @@ spec:
   template:
     metadata:
       labels:
-        app: cartservice
-      annotations:
-        vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/role: "devsecops"
-        vault.hashicorp.com/agent-inject-secret-redis-password.txt: "secret/redis-cart/config"
-        vault.hashicorp.com/namespace: "devsecops"  
-        # vault.hashicorp.com/agent-inject-template-redis-password: |
-        #   {{- with secret "secret/redis-cart/config" -}}
-        #   export REDIS_PASSWORD="{{ .Data.data.password }}"
-        #   {{- end -}}          
+        app: cartservice     
     spec:
+      volumes:
+        - name: secrets-store-inline
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: redis-spc
       serviceAccountName: redis-cart
       terminationGracePeriodSeconds: 5
       imagePullSecrets:
