--- a/devsecops/api-gateway/api-gateway.yaml
+++ b/devsecops/api-gateway/api-gateway.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: api-gateway
+  name: frontend
   labels:
-    app: api-gateway
+    app: frontend
 spec:
   selector:
     matchLabels:
-      app: api-gateway
+      app: frontend
   template:
     metadata:
       labels:
-        app: api-gateway
+        app: frontend
       annotations:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
     spec:
@@ -24,7 +24,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
       containers:
-        - name: server
+        - name: frontend
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
@@ -32,7 +32,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image: harbor.creativebox.dev/devsecops/api-gateway:23
+          image: harbor.creativebox.dev/devsecops/frontend:23
           ports:
           - containerPort: 8080
           readinessProbe:
@@ -80,7 +80,7 @@ spec:
           #   value: "true"
           - name: ENABLE_ASSISTANT
             value: "true"
-          # - name: api-gateway_MESSAGE
+          # - name: frontend_MESSAGE
           #   value: "Replace this with a message you want to display on all pages."
           # As part of an optional Google Cloud demo, you can run an optional microservice called the "packaging service".
           # - name: PACKAGING_SERVICE_URL
@@ -94,13 +94,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-gateway
+  name: frontend
   labels:
-    app: api-gateway
+    app: frontend
 spec:
   type: ClusterIP
   selector:
-    app: api-gateway
+    app: frontend
   ports:
   - name: http
     port: 80
@@ -109,13 +109,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-gateway-external
+  name: frontend-external
   labels:
-    app: api-gateway
+    app: frontend
 spec:
   type: NodePort
   selector:
-    app: api-gateway
+    app: frontend
   ports:
   - name: http
     port: 80
