--- a/devsecops/cartservice/cartservice.yaml
+++ b/devsecops/cartservice/cartservice.yaml
@@ -30,7 +30,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
       containers:
-      - name: server
+      - name: cartservice
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
