--- a/devsecops/checkoutservice/checkoutservice.yaml
+++ b/devsecops/checkoutservice/checkoutservice.yaml
@@ -22,7 +22,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
       containers:
-        - name: server
+        - name: checkoutservice
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
