--- a/devsecops/loadgenerator/loadgenerator.yaml
+++ b/devsecops/loadgenerator/loadgenerator.yaml
@@ -50,7 +50,7 @@ spec:
         - name: FRONTEND_ADDR
           value: "api-gateway:80"
       containers:
-      - name: main
+      - name: loadgenerator
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
