--- a/devsecops/productcatalogservice/productcatalogservice.yaml
+++ b/devsecops/productcatalogservice/productcatalogservice.yaml
@@ -23,7 +23,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
       containers:
-      - name: server
+      - name: productcatalogservice
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
