--- a/devsecops/redis-cart/redis.yaml
+++ b/devsecops/redis-cart/redis.yaml
@@ -19,7 +19,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
       containers:
-      - name: redis
+      - name: redis-cart
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
