--- a/devsecops/shippingservice/shippingservice.yaml
+++ b/devsecops/shippingservice/shippingservice.yaml
@@ -22,7 +22,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
       containers:
-      - name: server
+      - name: shippingservice
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
