--- a/devsecops/shoppingassistantservice/shoppingassistantservice.yaml
+++ b/devsecops/shoppingassistantservice/shoppingassistantservice.yaml
@@ -23,7 +23,7 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
       containers:
-      - name: server
+      - name: shoppingassistantservice
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
