change image name

--- a/devsecops/api-gateway/api-gateway.yaml
+++ b/devsecops/api-gateway/api-gateway.yaml
@@ -32,7 +32,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image: harbor.creativebox.dev/devsecops/frontend:23
+          image: harbor.creativebox.dev/devsecops/api-gateway:23
           ports:
           - containerPort: 8080
           readinessProbe:
