--- a/devsecops/loadgenerator/loadgenerator.yaml
+++ b/devsecops/loadgenerator/loadgenerator.yaml
@@ -31,13 +31,13 @@ spec:
         - /bin/sh
         - -exc
         - |
-          echo "Init container pinging api-gateway: ${FRONTEND_ADDR}..."
+          echo "Init container pinging frontend: ${FRONTEND_ADDR}..."
           STATUSCODE=$(wget --server-response http://${FRONTEND_ADDR} 2>&1 | awk '/^  HTTP/{print $2}')
           if test $STATUSCODE -ne 200; then
-              echo "Error: Could not reach api-gateway - Status code: ${STATUSCODE}"
+              echo "Error: Could not reach frontend - Status code: ${STATUSCODE}"
               exit 1
           fi
-        name: api-gateway-check
+        name: frontend-check
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
@@ -48,7 +48,7 @@ spec:
         image: busybox:latest
         env:
         - name: FRONTEND_ADDR
-          value: "api-gateway:80"
+          value: "frontend:80"
       containers:
       - name: loadgenerator
         securityContext:
@@ -61,9 +61,9 @@ spec:
         image: harbor.creativebox.dev/devsecops/loadgenerator:14
         env:
         - name: FRONTEND_ADDR
-          value: "api-gateway:80"
+          value: "frontend:80"
         - name: USERS
-          value: "10"
+          value: "100"
         resources:
           requests:
             memory: 1Gi
